--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: <p align="center"> Anish V A </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: AI enthusiast
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
